[package]
name = "sxlm-token"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "20.5.0"
arbitrary = "1.3"
[dev-dependencies]
soroban-sdk = { version = "20.5.0", features = ["testutils"] }


[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true